bk_ida/gccida/c2/purge_addressof_1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3499:68: error: unknown type name 'hash_table_0'; did you mean 'hash_table'?
bool  purge_addressof_1( rtx *loc, rtx insn, int force, int store, hash_table_0 *ht) 
                                                                   ^~~~~~~~~~~~
                                                                   hash_table
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/hashtable.h:40:19: note: 'hash_table' declared here
typedef struct ht hash_table;
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3499:7: error: conflicting types for 'purge_addressof_1'
bool  purge_addressof_1( rtx *loc, rtx insn, int force, int store, hash_table_0 *ht) 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:293:13: note: previous declaration is here
static bool purge_addressof_1 PARAMS ((rtx *, rtx, int, int,
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3533:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3533:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3536:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v43; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3540:1: error: unknown type name 'hash_table_0'; did you mean 'hash_table'?
hash_table_0 *v47; // rbp 
^~~~~~~~~~~~
hash_table
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/hashtable.h:40:19: note: 'hash_table' declared here
typedef struct ht hash_table;
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3541:4: error: expected ';' after expression
rtx v48; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3541:5: error: use of undeclared identifier 'v48'
rtx v48; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3544:4: error: expected ';' after expression
rtx v51; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3544:5: error: use of undeclared identifier 'v51'
rtx v51; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3553:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v60; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3562:4: error: expected ';' after expression
rtx v69; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3562:5: error: use of undeclared identifier 'v69'
rtx v69; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3567:4: error: expected ';' after expression
rtx v74; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3567:5: error: use of undeclared identifier 'v74'
rtx v74; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3571:4: error: expected ';' after expression
rtx v78; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3571:5: error: use of undeclared identifier 'v78'
rtx v78; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3575:4: error: expected ';' after expression
rtx v82; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/function.c:3575:5: error: use of undeclared identifier 'v82'
rtx v82; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof_1/src/obj/function.o] Error 1
